# Rank-Begger

./: README.md  build.gradle.kts  dict.txt  gradle.properties  log4j2.xml  mixins.catdueller.refmap.json  settings.gradle.kts
obfuscate/: native-whitelist-test.txt  native-whitelist.txt  start.ps1  start.sh
obfuscate/natives/: chacha20.lib
obfuscate/util/: CMakeLists.txt  antiHook.cpp  antiHook.h  build_comptime_library.sh  chacha20.cpp  chacha20.h  export.h  test_main.cpp  util.cpp  util.h
src/main/java/best/spaghetcodes/catdueller/mixins/: MixinEffectRenderer.java  MixinModList.java  MixinNetworkManager.java
src/main/java/org/afterlike/catdueller/mixins/: MixinEffectRenderer.java  MixinModList.java  MixinNetworkManager.java
src/main/kotlin/best/spaghetcodes/catdueller/: CatDueller.kt
src/main/kotlin/best/spaghetcodes/catdueller/bot/: BotBase.kt  MovementRecorder.kt  MovementRecorderSimple.kt  Session.kt  StateManager.kt
src/main/kotlin/best/spaghetcodes/catdueller/commands/: ConfigCommand.kt  HWIDCommand.kt  MovementCommand.kt  ParticleTestCommand.kt  PingCommand.kt  RobotCommand.kt
src/main/kotlin/best/spaghetcodes/catdueller/core/: Config.kt  ConfigSorter.kt  DelayedTask.kt  DelayedTaskHandler.kt  HWIDLock.kt  KeyBindings.kt  SafeDisconnect.kt
src/main/kotlin/best/spaghetcodes/catdueller/events/: PacketEvent.kt
src/main/kotlin/best/spaghetcodes/catdueller/irc/: IRCDodgeClient.kt  (+1 more)
src/main/kotlin/org/afterlike/catdueller/: CatDueller.kt
src/main/resources/: mcmod.info  mixins.catdueller.json
src/main/resources/assets/catdueller/lang/: en_US.lang
(+104 files in other folders)
